--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "babel-preset-env": "^1.7.0",
     "i": "^0.3.6",
+    "materialize-css": "^1.0.0-rc.2",
     "npm": "^6.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
